--- a/app/views/editorial/pages_lavora-con-noi.html.erb
+++ b/app/views/editorial/pages_lavora-con-noi.html.erb
@@ -1,4 +1,14 @@
-<h2><%=l(:label_workon)%></h2>
+<div class="fs-layout-cell fs-content clearfix" style="width: 100%; position:relative;">
+  <article class="fs-post fs-article">
+    <div class="fs-postcontent fs-postcontent-0 clearfix">
+      <div class="fs-content-layout">
+        <div class="fs-content-layout-row">
+          <div class="fs-layout-cell layout-item-0" style="width: 99%">
+            <%= raw(Setting.static_page_lavoraconnoi.html_safe) %>
+            <!--  <p style="text-align: center;">
+
+
+<h2><%#l(:label_workon)%></h2>
 <script type="text/javascript">
   //$(function () {
   $(document).ready(function() {
@@ -35,3 +45,19 @@ Vivamus enim eros, porta imperdiet pulvinar eget, tincidunt vel mauris. Pellente
   <p>Nunc felis urna, lobortis id ornare sed, sodales vitae justo. Aenean at ipsum diam. Aliquam erat volutpat. Nunc mollis nisl eget ipsum hendrerit eget lobortis risus tincidunt. Fusce sollicitudin dapibus volutpat. Vestibulum suscipit urna leo. In mattis euismod enim eget laoreet. Nullam nulla tellus, ultrices ac condimentum et, molestie ut diam. Nulla enim ligula, mattis ultricies mollis at, lobortis sit amet nibh. Donec tempus sem sit amet nulla lacinia elementum. Mauris id orci dui. Curabitur placerat lobortis ligula eu adipiscing. Mauris felis odio, cursus ac porttitor eget, pretium sit amet orci. Cras non felis et felis placerat ullamcorper non ut mauris. Nunc ullamcorper lacinia lorem quis semper. </p>
   </div>
 </div>
+
+
+                <br/>
+                </div> -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <br/>
+  </article>
+  <br/>
+  <div class="clearfix"></div>
+</div>
+<%= render :partial => 'blocco_sidebar1' %>
+
+
