--- a/app/views/editorial/_blocco_eventi_contact_me.html.erb
+++ b/app/views/editorial/_blocco_eventi_contact_me.html.erb
@@ -13,15 +13,21 @@
 
         <div id="accordion-events-contact">
           <div id="fs-events-contact"></div>
-
-            <% form_tag({:action => "profilo_contact",  :id => @user_profile, :method => :post}) do %>
+          <% remote_form_for(
+                     :user,
+                     :url => {:controller => 'editorial', :action => 'send_proposal_meeting'},
+                        :html => {
+                               :id=> 'user_send_mail',
+                             :method => :put,
+                             :multipart => true}
+             ) do  %>
 
                     <%= text_area_tag 'message',"scrivi un messaggio qui ..." , :cols => 32, :rows => 10 %>
               <br />
 
-                <p style="margin-top: 3px; margin-right: 30px; height: 30px;" >  <%= submit_tag "invia", :action => 'profilo_edit', :class => "fs-vuoto-inline-button" %></p>
+                <p style="margin-top: 3px; margin-right: 30px; height: 30px;" >  <%= submit_tag "invia", :class => "fs-vuoto-inline-button" %></p>
             <% end %>
-
+          <div id='user-response'></div>
         </div>
 
         <div class="cleared"></div>
