--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -79,7 +79,7 @@
                   pauseOnHover	: true
               }
           });
-          $(".list_assos_carousel").removeClass("hide");
+          //$("#assos_carousel").removeClass("hide");
           // $("input[type=submit]").button();
 
           //Focus
