--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -115,6 +115,7 @@ text-align: center;
     display: inline-block;
     margin: 0 0 2px 4px;
     float: left;
+    width: 45%;
 }
 
 .fs-prova-gratis {
