--- a/public/stylesheets/jquery-ui-rewrite.css
+++ b/public/stylesheets/jquery-ui-rewrite.css
@@ -173,7 +173,7 @@ padding: 0;
 }
 .ui-widget-content {
     border: 0;
-    background: none;
+    background: white;
 }
 /* fine per edizioni */
 /* ------------------------------------------------------------------------*/
