prova gratis mail

--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -75,6 +75,7 @@
     </div>
 </div>
 
+<div id="toTop" class="hol" onclick="Effect.ScrollTo('wrapper'); return false;"></div>
 <div id="ajax-indicator" style="display:none;"><span><%= l(:label_loading) %></span></div>
 
 <div id="footer">
