--- a/app/views/settings/_fee.html.erb
+++ b/app/views/settings/_fee.html.erb
@@ -9,8 +9,11 @@
       <p><%= setting_text_field :renew_days, :size => 6, :title => l(:label_renew_days) %> <%= l(:label_day_plural) %>
       <br /><em><%= l(:label_renew_days) %></em></p>
 
-      <p><%= setting_text_field :fee_bcc_recipients, :size => 60, :title => l(:label_fee_bcc_recipients) %><br />
+      <p><%= setting_text_field :fee_bcc_recipients, :size => 60, :title => l(:setting_fee_bcc_recipients) %><br />
 <em><%= l(:label_fee_bcc_recipients) %></em></p>
+
+      <p><%= setting_text_field :fee_email, :size => 60, :title => l(:setting_fee_email) %><br />
+<em><%= l(:label_fee_email) %></em></p>
 
     </div>
 
