--- a/app/views/account/_tramenu_prova.erb
+++ b/app/views/account/_tramenu_prova.erb
@@ -33,34 +33,62 @@
     $("#informativa_prova").dialog("open");
     return false;
   }
+  var urlprova = '<%= prova_gratis_path %>';
+  function prova(){
+    var mail = $('#mail').val();
+    var lastname = $('#lastname').val();
+    var firstname = $('#firstname').val();
+    var team_artist = $('#modlgn_remember').is(':checked');
+    $.post(urlprova, { mail: mail, lastname: lastname, firstname: firstname, team_artist: team_artist },
+      function (data) {
+        data = data || {};
+        if (data.success) {
+            //OnSuccess
+            if (data.response) {
+              $("#flash_notice").html(data.response);
+              //$("#user-response").html(data.response);
+              alert(data.response)
+            }
+        } else if (data.errors) {
+            $("#flash_error").html(data.errors);
+            $("#flash_notice").html(data.response);
+            //showerrmsg(data.errors);
+            alert(data.errors)
+        }
+        else
+          alert("La prova non è andata a buon fine: <br />" + data)
+
+      }
+    );
+    return false;
+  }
+
 </script>
 
 <p class="fs-tramenu-blockheader x-red fs-tramenu-bh1">Prova la newsletter gratis per <%= Setting.register_days %> giorni!</p>
 <div id="fs-prova-gratis-fields">
-  <% form_tag({:controller => 'account', :action => 'prova'}, :method => :post) do %>
-      <span class="fs-prova-gratis-txt"><%= text_field 'user', 'firstname', :style => 'width:95%;', :placeholder => l(:field_firstname) + "..."  %></span>
-      <span class="fs-prova-gratis-txt"><%= text_field 'user', 'lastname', :style => 'width:95%;', :placeholder => l(:field_lastname) + "..."  %></span>
-      <span class="fs-prova-gratis-txt"><%= text_field 'user', 'mail', :style => 'width:95%;', :placeholder => l(:field_mail) + "..."  %></span>
+  <span class="fs-prova-gratis-txt"><%= text_field_tag 'firstname', nil, :style => 'width:95%;', :placeholder => l(:field_firstname) + "..."  %></span>
+  <span class="fs-prova-gratis-txt"><%= text_field_tag 'lastname', nil, :style => 'width:95%;', :placeholder => l(:field_lastname) + "..."  %></span>
+  <span class="fs-prova-gratis-txt"><%= text_field_tag 'mail', nil, :style => 'width:95%;', :placeholder => l(:field_mail) + "..."  %></span>
 
-      <input type="submit" value="<%= l(:button_prova)%>" name="leggi_gratis" id="fs-prova-gratis-btn" class="fs-button"/>
+  <input type="button" value="<%= l(:button_prova)%>" name="leggi_gratis" id="fs-prova-gratis-btn" class="fs-button" onclick="return prova();"/>
 
-      <div id="fs-prova-gratis-info">
-        <div class="fs-prova-gratis-info">
-          <label class="fs-checkbox">
-            <input type="checkbox" id="modlgn_remember" name="team_artist" value="yes" alt="Team Artist" checked="true"/>
-          </label>
-          <ul id="tickGratis" class="fs-prova-gratis-righe">
-            <li>Prova anche la demo di <a href="http://teamartist.com" target="_blank">Team Artist</a></li>
-            <li> il software per le nostre associazioni. </li>
-            <li>Promo: se ti iscrivi a FiscoSport...  </li>
-             <li>-10% sul listino approfittane ora! <a href="http://teamartist.com" target="_blank">Scopri...</a></li>
-          </ul>
-          <div class="clearfix"></div>
-           <span title="Cliccando su '<%= l(:button_prova)%>' acconsenti esplicitamente al trattamento dei dati personali ai sensi del D.Lgs. 196/2003" >Cliccando su "<%= l(:button_prova)%>" acconsenti al <a href='#' id='ainformativa_prova' class='pri'><b>trattamento dati</b></a>
-           </span>
-        </div>
-      </div>
-  <% end %>
+  <div id="fs-prova-gratis-info">
+    <div class="fs-prova-gratis-info">
+      <label class="fs-checkbox">
+        <input type="checkbox" id="modlgn_remember" name="team_artist" value="yes" alt="Team Artist" checked="true"/>
+      </label>
+      <ul id="tickGratis" class="fs-prova-gratis-righe">
+        <li>Prova anche la demo di <a href="http://teamartist.com" target="_blank">Team Artist</a></li>
+        <li> il software per le nostre associazioni. </li>
+        <li>Promo: se ti iscrivi a FiscoSport...  </li>
+         <li>-10% sul listino approfittane ora! <a href="http://teamartist.com" target="_blank">Scopri...</a></li>
+      </ul>
+      <div class="clearfix"></div>
+       <span title="Cliccando su '<%= l(:button_prova)%>' acconsenti esplicitamente al trattamento dei dati personali ai sensi del D.Lgs. 196/2003" >Cliccando su "<%= l(:button_prova)%>" acconsenti al <a href='#' id='ainformativa_prova' class='pri'><b>trattamento dati</b></a>
+       </span>
+    </div>
+  </div>
 </div>
 <div id="informativa_prova" title="Informativa" class="hidden" style="overflow: hidden;">
 </div>
