--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -155,7 +155,8 @@
         </div>
       </div>
     </div>
-    <div id="toTop" style="display: block;"></div>
+    <div id="toTop" style="display: none;"></div>
+    <div id="ajax-indicator" style="display: none;"><span><%= l(:label_loading) %></span></div>
     <footer class="fs-footer clearfix">
       <p><a href="#">Link1</a> | <a href="#">Link2</a> | <a href="#">Link3</a></p>
 
