tramenu -> banners e assos

--- a/app/views/cross_organizations/_form.html.erb
+++ b/app/views/cross_organizations/_form.html.erb
@@ -13,7 +13,7 @@
 
   <p><%= f.file_field :image, :label => :field_immagine %> </p>
 
-  <p id="prev" style="height: 100px;"> <%= image_tag @cross_organization.image.url(:m) %>   </p>
+  <p id="prev" style="max-height: 300px;"> <%= image_tag @cross_organization.image.url(:m) %>   </p>
 
   <p>
   <ul style="font-size: 0.8em; color: #aeaeae; margin: 0 0 5px  11%;">
