--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -79,6 +79,17 @@
                   pauseOnHover	: true
               }
           });
+          $("#carousel_tramenu_js").carouFredSel({
+          	responsive	: true,
+          	scroll		: {
+          		fx			: "crossfade"
+          	},
+          	items		: {
+          		visible		: 1,
+          		width		: 290,
+          		height		: 94
+          	}
+          });
           //$("#assos_carousel").removeClass("hide");
           // $("input[type=submit]").button();
 
