--- a/app/views/editorial/_blocco_sidebar1.html.erb
+++ b/app/views/editorial/_blocco_sidebar1.html.erb
@@ -1,17 +1,20 @@
 <div class="fs-layout-cell fs-sidebar1 clearfix">
-    <%= render :partial => 'blocco_slide1' %>
-  <% if !@block_projects.nil? %>
-   <%= render :partial => 'blocco_edizioni' %>
+  <% unless request.url.match('/event').nil? %>
+      <%= render :partial => 'blocco_eventi_contact_me' %>
+      <% unless @conv_prossimo.nil? %>
+          <%= render :partial => 'blocco_eventi' %>
+      <% end %>
+       <%= render :partial => 'blocco_slide1' %>
   <% end %>
-  <% if !@conv_prossimo.nil? %>
-   <%= render :partial => 'blocco_eventi' %>
+  <%= render :partial => 'blocco_slide1' %>
+  <% unless @block_projects.nil? %>
+      <%= render :partial => 'blocco_edizioni' %>
   <% end %>
-    <%# render :partial =>  'blocco_ricerca' %>
-    <%# render :partial => 'blocco_account' %>
-  <% if !@articolo.nil? %>
-    <%= render :partial => 'blocco_art_evidenziati' %>
-  <%	end  %>
-  <% if current_page?(eventi_path) %>
-    <%= render :partial =>  'blocco_eventi_contact_me' %>
+  <%# render :partial =>  'blocco_ricerca' %>
+  <%# render :partial => 'blocco_banners1' %>
+  <%# render :partial => 'blocco_account' %>
+  <% unless @articolo.nil? %>
+      <%= render :partial => 'blocco_art_evidenziati' %>
   <% end %>
 </div>
+
