--- a/app/views/editorial/_tramenu_assos.html.erb
+++ b/app/views/editorial/_tramenu_assos.html.erb
@@ -3,17 +3,15 @@
 <!--  <li> <%# image_tag("/images/banners/"+ ban.banner , :alt => ban.espositore, :width =>80) %> <%# ban.didascalia %> </li> -->
 <%# end %>
 <p class="fs-tramenu-blockheader x-blue">Associazioni aderenti a Fiscosport a</p>
+<% if  cross_org_logos.count > 0  %>
 <div class="list_assos_carousel" style="height:100px; overflow: hidden;" >
   <ul id="carousel_assos_js">
-
-    <li><img src="/images/banners/1.jpg" alt="basketball"/> <span> 1 didascalia 1 </span></li>
-    <li><img src="/images/banners/2.jpg" alt="beachtree"/> <span> 2 didascalia 2 </span></li>
-    <li><img src="/images/banners/3.jpg" alt="cupcackes"/> <span> 3 didascalia descrizione lunga </span></li>
-    <li><img src="/images/banners/4.jpg" alt="hangmat"/> <span> 4 didascalia 4 </span></li>
-    <li><img src="/images/banners/5.jpg" alt="new york"/> <span> 5 didascalia 5 </span></li>
-    <li><img src="/images/banners/6.jpg" alt="laundry"/> <span> 6 didascalia 6 </span></li>
-    <li><img src="/images/banners/7.jpg" alt="mom son"/> <span> 7 didascalia 7 </span></li>
-
+     <% cross_org_logos.each do |i|  %>
+        <li>    <%=  image_tag i.image.url(:m) %> </li>
+     <% end %>
   </ul>
   <div class="clearfix"></div>
 </div> <!-- /image_carousel -->
+ <% else %>
+ <h3>nessuna associazione aderente</h3>
+ <% end %>
