--- a/app/views/group_banners/_form.html.erb
+++ b/app/views/group_banners/_form.html.erb
@@ -4,12 +4,11 @@
   <p><%= f.text_field :espositore, :label => :field_espositore, :required => true %></p>
 
   <p><%= f.text_field :url, :label => :field_url, :required => true, :size => 80 %></p>
+  <p><%= f.check_box :se_visibile, :label => :field_se_visibile %></p>
 
   <p><%= f.text_field :priorita, :label => :field_priorita, :size => 3 %></p>
 
-  <p><%= f.text_field :posizione, :label => :field_posizione, :required => true, :size => 80 %></p>
-
-  <p><%= f.check_box :se_visibile, :label => :field_se_visibile %></p>
+  <p><%# f.text_field :posizione, :label => :field_posizione, :required => true, :size => 80 %></p>
 
   <p><%= f.text_field :banner, :label => :field_banner, :required => true, :size => 80 %></p>
 
@@ -17,19 +16,47 @@
 
   <p><%= f.text_field :clicks, :label => :field_clicks, :size => 3 %></p>
 
+  <p><%= f.text_field :impressions_history, :label => :field_impressions_history, :size => 3 %></p>
+  <p><%= f.check_box :se_prima_pagina, :label => :field_se_prima_pagina %></p>
   <p><%# f.text_area :didascalia, :required => false, :cols => 60, :rows => 15, :class => 'wiki-edit' %></p>
 
   <p><%# f.text_area :didascalia, :required => false, :cols => 60, :rows => 15, :class => 'rich_text_editor' %></p>
-  <hr/>
+
   <div class="yui-skin-sam">
-    <p><%= f.text_area :didascalia, :name => 'group_banner[didascalia]', :required => false, :cols => 120, :rows => 15 %>  </p>
+    <p><%= f.text_area :didascalia, :name => 'group_banner[didascalia]', :required => false %>  </p>
   </div>
+  <hr/>
+  <p>nuova versione banners e immagine</p>
+  <p> <%= f.select(:posizione, ['block_l','block_s','tramenu'], {}, { :class => '',:label=> :field_posizione}) %></p>
+  <p><%= f.file_field :image, :label => :field_immagine %> </p>
+      <%  @sim = @group_banner.posizione.to_sym  %>
+  <%= @sim  %>
+    <p id="prev" style="max-height: 300px;"> <%= image_tag @group_banner.image.url(@sim) %>   </p>
+    <p>
+    <ul style="font-size: 0.8em; color: #aeaeae; margin: 5px 0 5px  11%;">
+      <li>
+        Immagini stili e misure:
 
+      </li>
+      <li>
+        blocco grande a sinistra: :block_l => "256x216#"
+      </li>
+      <li>
+        blocco piccolo come dentro un articolo: :block_s => "194x154#"
+      </li>
+      <li>
+        blocco tra i menu a destra :tramenu => "290x94#"
+      </li>
+      <li>
+        l'immagine verrà non deve superare i 200kb  e di formato jpg/png/gif/bmp
+      </li>
+    </ul>
 
-  <p><%= f.check_box :se_prima_pagina, :label => :field_se_prima_pagina %></p>
+  </div>
+  <script type="text/javascript">
+      document.getElementById('group_banner_image').addEventListener('change', handleFileSelect, false);
+  </script>
 
-  <p><%= f.text_field :impressions_history, :label => :field_impressions_history, :size => 3 %></p>
-</div>
 
 <% content_for :header_yui do %>
     <%= stylesheet_link_tag 'yui/skin.css', :media => 'all' %>
@@ -45,7 +72,6 @@
     (function () {
         var myConfig1 = {
             handleSubmit:true,
-            height:'400px',
             width:'95%',
             resize:true,
             animate:true,
