--- a/app/views/group_banners/edit.html.erb
+++ b/app/views/group_banners/edit.html.erb
@@ -1,6 +1,6 @@
 <h2><%= link_to l(:label_group_banner_plural), group_banners_path %> &#187; <%= h(@group_banner) %></h2>
 
-<% labelled_form_for @group_banner do |f| %>
+<% labelled_form_for @group_banner, :html => {:multipart => true}  do |f| %>
 <%= submit_tag l(:button_save) %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 <%= submit_tag l(:button_save) %>
