--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -9,7 +9,7 @@
   <!--  <p><%# f.check_box :protetto, :label => :label_protetto %></p> -->
   <p><%= f.file_field :image, :label => :field_immagine %> </p>
 
-  <p id="prev" style="height: 200px;"> <%= image_tag @section.image.url(:l) %>   </p>
+  <p id="prev" style="max-height: 300px;"> <%= image_tag @section.image.url(:l) %>   </p>
 
   <p>
   <ul style="font-size: 0.8em; color: #aeaeae; margin: 5px 0 5px  11%;">
