--- a/public/stylesheets/jquery-ui-rewrite.css
+++ b/public/stylesheets/jquery-ui-rewrite.css
@@ -32,13 +32,13 @@ padding: 0;
 #accordion-events-contact .ui-state-active  {
 
 }
-#accordion-events-contact textarea {
-    width: inherit;
-
+#accordion-events-contact textarea, #accordion-events-contact input[type="text"] {
     color: inherit!important;
     font-size: 0.9em;
     font-weight: normal;
     padding: 5px;
+    width: 94%;
+    text-align: left;
 
 }
 
