--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -186,7 +186,7 @@ text-align: center;
     -moz-box-shadow: 0 2px 5px rgba(50, 50, 50, 0.3);
     box-shadow: 0 2px 5px rgba(50, 50, 50, 0.3);
     width: 290px;
-    height: 90px;
+    height: 94px;
     display: block;
 
 }
@@ -233,13 +233,10 @@ text-align: center;
 .list_assos_carousel li img {
     border: 1px solid #ccc;
     background-color: white;
-    padding: 7px;
     margin: 5px;
+    padding: 6px;
     display: table-row;
     float: left;
-    width: 80px;
-    height: 80px
-
 }
 
 .list_assos_carousel li span {
@@ -1106,6 +1103,24 @@ right: -14px;   */
 
 /* fine blocco edizioni */
 /* inizio  convegni */
+#fs-event-user-response{
+    background: #FFFFFF;
+    -webkit-border-radius: 1px;
+    -moz-border-radius: 1px;
+    border-radius: 1px;
+    -webkit-box-shadow: 0 0 3px 2px rgba(172, 211, 218, 0.88);
+    -moz-box-shadow: 0 0 3px 2px rgba(172, 211, 218, 0.88);
+    box-shadow: 0 0 3px 2px rgba(172, 211, 218, 0.87);
+    /* padding: 7px;                */
+    width: 99%;
+    margin: 5px auto;
+   color: #fff3da;
+    display: block;
+    text-align: center;
+    font-size: 0.9em;
+    background-color: #b22222;
+}
+
 #fs-events-contact{
     background-color: #ffffff;
     background-image: url("/images/commons/event-contact-me.jpg") ;
@@ -1125,7 +1140,7 @@ right: -14px;   */
     -moz-box-shadow: 0 0 3px 2px rgba(201, 50, 20, 0.9);
     box-shadow: 0 0 3px 2px rgba(238, 232, 170, 0.9);
     /* padding: 7px;                */
-    width: 100%;
+    width: 99%;
     margin-top: 1px;
 }
 
