--- a/app/views/editorial/_blocco_eventi_contact_me.html.erb
+++ b/app/views/editorial/_blocco_eventi_contact_me.html.erb
@@ -34,7 +34,7 @@
         <%= text_field_tag 'evtmail', "", :placeholder => "La tua mail...", :size => 100 %>
     <% end %>
   </p>
-    <%= text_area_tag 'message', "scrivi un messaggio qui ...", :cols => 32, :rows => 10 %>
+    <%= text_area_tag 'message', "", :placeholder => "scrivi un messaggio qui ...", :cols => 32, :rows => 10 %>
     <br/>
   <p style="margin-top: 3px; margin-right: 30px; height: 30px;">  <%= submit_tag "invia", :class => "fs-vuoto-inline-button", :onclick => "sendmail();" %></p>
    <div id='user-response'></div>
