--- a/app/views/assos/_form.html.erb
+++ b/app/views/assos/_form.html.erb
@@ -1,12 +1,8 @@
 <%= f.error_messages %>
 
 <div class="box tabular">
-
-
 <p style="display:none2;">  NON USARE f.codice sostiuito da id ==> 
   <%=h (f.object.id) %></p>
-</p>
-  
   <p><%= f.text_field :ragione_sociale, :label => :field_ragione_sociale, :required => true, :size => 40 %></p>
   <p><%= f.text_field :indirizzo, :label => :field_indirizzo, :size => 50 %></p>
   <p><%= f.text_field :email, :label => :field_email, :required => true, :size => 20 %></p>
@@ -18,13 +14,21 @@
   <p><%= f.text_field :fax, :label => :field_fax, :fax => 40  %></p>
   <p><%= f.text_area :comunicazioni, :required => false, :cols => 60, :rows => 15, :class => 'wiki-edit' %></p>
   <p><%= f.text_field :email_alt, :label => :field_email_alt, :size => 20 %></p>
-</div>
-
-TODO:
-gestione validazione email su asso
-vedere delete va in errore 
-Logo è un imagine? 
-<%= wikitoolbar_for 'comunicazioni' %>
+  <p><%= f.file_field :image, :label => :field_immagine %> </p>
+   <p id="prev" style="max-height: 300px;"> <%= image_tag @cross_organization.image.url(:m) %>   </p>
+   <p>
+   <ul style="font-size: 0.8em; color: #aeaeae; margin: 0 0 5px  11%;">
+     <li>
+       il rapporto tra larghezza e altezza dell'immagine sarà 1/1 (quadrato)
+     </li>
+     <li>
+       l'immagine verrà non deve superare i 200kb e di formato jpg/png
+     </li>
+   </ul>
+ </div>
+ <script type="text/javascript">
+     document.getElementById('asso_image').addEventListener('change', handleFileSelect, false);
+ </script>
 
 
 
