--- a/app/views/assos/edit.html.erb
+++ b/app/views/assos/edit.html.erb
@@ -1,6 +1,6 @@
 <h2><%= link_to l(:label_asso_plural), assos_path %> &#187; <%= h(@asso) %></h2>
 
-<% labelled_form_for (@asso) do |f| %>
+<% labelled_form_for (@asso), :html => {:multipart => true} do |f| %>
 <%= submit_tag l(:button_save) %>
 <%= render :partial => 'form', :locals => { :f => f } %>
 <%= submit_tag l(:button_save) %>
