--- a/app/views/assos/new.html.erb
+++ b/app/views/assos/new.html.erb
@@ -1,11 +1,8 @@
 <h2><%= link_to l(:label_asso_plural), assos_path %> &#187; <%= l(:label_asso_new) %></h2>
-
-<% labelled_form_for @asso do |f| %>
-
-<%= render :partial => 'form', :locals => { :f => f } %>
-
-<p>
-  <%= f.submit l(:button_create) %>
-  <%= f.submit l(:button_create_and_continue), :name => 'continue' %>
-</p>
+<% labelled_form_for @asso, :html => {:multipart => true} do |f| %>
+    <%= render :partial => 'form', :locals => {:f => f} %>
+    <p>
+      <%= f.submit l(:button_create) %>
+      <%= f.submit l(:button_create_and_continue), :name => 'continue' %>
+    </p>
 <% end %>
