--- a/app/views/editorial/_blocco_sidebar1.html.erb
+++ b/app/views/editorial/_blocco_sidebar1.html.erb
@@ -4,7 +4,6 @@
       <% unless @conv_prossimo.nil? %>
           <%= render :partial => 'blocco_eventi' %>
       <% end %>
-       <%= render :partial => 'blocco_slide1' %>
   <% end %>
   <%= render :partial => 'blocco_slide1' %>
   <% unless @block_projects.nil? %>
@@ -16,5 +15,6 @@
   <% unless @articolo.nil? %>
       <%= render :partial => 'blocco_art_evidenziati' %>
   <% end %>
+  <%=   render :partial => 'blocco_banners_l' %>
 </div>
 
