--- a/app/views/group_banners/new.html.erb
+++ b/app/views/group_banners/new.html.erb
@@ -1,9 +1,7 @@
 <h2><%= link_to l(:label_group_banner_plural), group_banners_path %> &#187; <%= l(:label_group_banner_new) %></h2>
 
-<% labelled_form_for @group_banner do |f| %>
-
+<% labelled_form_for @group_banner, :html => {:multipart => true} do |f| %>
 <%= render :partial => 'form', :locals => { :f => f } %>
-
 <p>
   <%= f.submit l(:button_create) %>
   <%= f.submit l(:button_create_and_continue), :name => 'continue' %>
