--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -1140,7 +1140,7 @@ right: -14px;   */
     -moz-box-shadow: 0 0 3px 2px rgba(201, 50, 20, 0.9);
     box-shadow: 0 0 3px 2px rgba(238, 232, 170, 0.9);
     /* padding: 7px;                */
-    width: 99%;
+    width: 100%;
     margin-top: 1px;
 }
 
@@ -1800,6 +1800,48 @@ right: -14px;   */
     line-height: 1.5em;
     font-weight: bold;
 }
+/* ------------------------------- test carousel -------------------------*/
+
+.banners_block_l_carousel {
+	padding: 0;
+	position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+.banners_block_l_carousel img {
+/*	border: 1px solid #ccc;
+	background-color: white;
+	padding: 9px;
+	margin: 7px; */
+	display: block;
+	float: left;
+}
+#carousel_block_l_js img {
+    margin: 0;
+    padding: 0;
+}
+.banners_block_l_pagination {
+	text-align: center;
+}
+.banners_block_l_pagination a {
+	background: url(../images/ico/bullet-d.png) top left no-repeat transparent;
+	width: 24px;
+	height: 24px;
+	margin: 0 5px 0 0;
+	display: inline-block;
+}
+.banners_block_l_pagination a.selected {
+    background: url(../images/ico/bullet-s.png) top left no-repeat transparent;
+	cursor: default;
+}
+.banners_block_l_pagination a span {
+	display: none;
+}
+.banners_block_l_clearfix {
+	float: none;
+	clear: both;
+}
+
 
 
 
