--- a/app/views/layouts/mailer_textile.html.erb
+++ b/app/views/layouts/mailer_textile.html.erb
@@ -29,5 +29,6 @@ hr {
 <%= yield %>
 <hr />
 <span class="footer"><%= Redmine::WikiFormatting.to_html(Setting.text_formatting, Setting.emails_footer) %></span>
+Mail from textile
 </body>
 </html>
