--- a/app/views/editorial/_tramenu_assos.html.erb
+++ b/app/views/editorial/_tramenu_assos.html.erb
@@ -2,7 +2,7 @@
 
 <!--  <li> <%# image_tag("/images/banners/"+ ban.banner , :alt => ban.espositore, :width =>80) %> <%# ban.didascalia %> </li> -->
 <%# end %>
-<p class="fs-tramenu-blockheader x-blue">Associazioni aderenti a Fiscosport a</p>
+<p class="fs-tramenu-blockheader x-blue">Associazioni aderenti a Fiscosport</p>
 <% if  cross_org_logos.count > 0  %>
 <div class="list_assos_carousel" style="height:100px; overflow: hidden;" >
   <ul id="carousel_assos_js">
