--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -19,14 +19,14 @@
                       <% if articolo.se_protetto %>
                           <div class="fs-postmetadatafooter-author-ko">
                             <div class="fs-postmetadatafooter-author">
-                              <% if !articolo.author.user_profile.nil? %>
+                             <% if !articolo.author.nil? && !articolo.author.user_profile.nil? %>
                                   <span><%= articolo.author.user_profile.my_avatar(:xs) %> </span>
                               <% else %>
                                   <span style="width: 32px;">Di:</span>
                               <% end %>
                               <span style="padding-left: 6px;"> <%= h articolo.author %></span>
                             </div>
-                            <% if !articolo.author.user_profile.nil? %>
+                            <% if !articolo.author.nil? && !articolo.author.user_profile.nil? %>
                                 <div class="fs-postmetadatafooter-author-qualifica"><%= articolo.author.user_profile.fs_qualifica unless articolo.author.user_profile.fs_qualifica.nil? %>  </div>
                             <% end %>
                           </div>
@@ -34,14 +34,14 @@
                       <% else %>
                           <div class="fs-postmetadatafooter-author-ok">
                             <div class="fs-postmetadatafooter-author">
-                              <% if !articolo.author.user_profile.nil? %>
+                              <% if !articolo.author.nil? && !articolo.author.user_profile.nil? %>
                                   <span><%= articolo.author.user_profile.my_avatar(:xs) %> </span>
                               <% else %>
                                   <span style="width: 32px;">Di:</span>
                               <% end %>
                               <span style="padding-left: 6px;"> <%= h articolo.author %></span>
                             </div>
-                            <% if !articolo.author.user_profile.nil? %>
+                            <% if !articolo.author.nil? && !articolo.author.user_profile.nil? %>
                                 <div class="fs-postmetadatafooter-author-qualifica"><%= articolo.author.user_profile.fs_qualifica unless articolo.author.user_profile.fs_qualifica.nil? %>  </div>
                             <% end %>
                           </div>
