fs informa in FE

--- a/app/views/editorial/_blocco_sidebar1.html.erb
+++ b/app/views/editorial/_blocco_sidebar1.html.erb
@@ -1,4 +1,5 @@
 <div class="fs-layout-cell fs-sidebar1 clearfix">
+  <%= render :partial => 'blocco_informa' %>
   <% unless request.url.match('/event').nil? %>
       <%= render :partial => 'blocco_eventi_contact_me' %>
       <% unless @conv_prossimo.nil? %>
@@ -17,4 +18,3 @@
   <% end %>
   <%=   render :partial => 'blocco_banners_l' %>
 </div>
-
