--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -149,7 +149,8 @@
 
       <div class="fs-shapes">
         <h1 class="fs-headline" data-left="58%">
-          <a href="#">Professionisti esperti in materie fiscali sportive</a>
+          <a href="#" class="hide">Professionisti esperti in materie fiscali sportive</a>
+          <a href="#"><%= Setting.welcome_text_fs %></a>
         </h1>
 
 
