--- a/app/views/editorial/_tramenu_logged.html.erb
+++ b/app/views/editorial/_tramenu_logged.html.erb
@@ -1,4 +1,4 @@
-<p class="fs-tramenu-blockheader x-granata">Sponsor</p>
+<p class="fs-tramenu-blockheader x-granata">TEAmArtist</p>
 <div class="fs-blockcontent fs-tramenu1-logged">
   <% if  banners_tramenu.count > 0 %>
       <ul id="carousel_tramenu_js">
@@ -6,7 +6,7 @@
             <% if  i.url.nil? %>
                 <li>    <%= image_tag i.image.url(:tramenu) %> </li>
             <% else %>
-                <li>  <%= link_to(image_tag(i.image.url(:tramenu)), i.url) %> </li>
+                <li>  <%= link_to(image_tag(i.image.url(:tramenu)), i.url , :target => '_blank') %> </li>
             <% end %>
         <% end %>
       </ul>
