--- a/app/views/editorial/edizione.html.erb
+++ b/app/views/editorial/edizione.html.erb
@@ -1,86 +1,16 @@
-<div class="fs-layout-cell fs-content clearfix">
+<div class="fs-layout-cell fs-content clearfix" style="width: 99%; position:relative;">
   <div id="fs-edizione">
     <%= link_to(image_tag("/images/ico/newsletter.png"), url_for(:controller => 'editorial', :action => "edizione_newsletter", :escape => false), :height => 64) %>
     <%= @project.name %>
   </div>
   <%# @project.description.html_safe unless @project.description.blank? %>
-  <div class="wiki">
-    <%= textilizable(@project.description) %>
+  <div style="text-align: center;">
+    <%= @project.description.nil? ?  '' : @project.description  %>
   </div>
   <br/>
-
   <div class="cleared" style="width: 100%; margin:11px;"></div>
-  <% if @issues && @issues.any? %>
-      <% @issues.each do |articolo| %>
-          <!-- qui è l'inserimento dell'articolo -->
-          <ARTICLE class="fs-post fs-article">
-            <% if articolo %>
-                <div class="fs-postmetadataheader">
-                  <span class="fs-art-sezione">&nbsp;<%= articolo.top_section %>&nbsp;::&nbsp;<%= articolo.section %></span>
-                  <span class="fs-postdateicon" style="float:right;"><%# articolo.due_date %> <%= I18n.localize(articolo.due_date.to_date, :format => :mese_anno) %></span>
-                  <h5 class="fs-postheader">
-                    <%= link_to_articolo(articolo, :title=> h(smart_truncate(articolo.subject, 110))) %>
-                  </h5>
-                </div>
-                <div class="fs-postcontent fs-postcontent-0 clearfix">
-                  <div class="fs-content-layout-wrapper layout-item-0">
-                    <div class="fs-image-caption-wrapper">
-                      <%= if articolo.immagine_url.nil?
-                            if FileTest.exist?("#{RAILS_ROOT}/public/images/commons/sections/#{articolo.top_section.immagine}")
-                              image_tag("/images/commons/sections/#{articolo.top_section.immagine}")
-                            else
-                              image_tag("/images/commons/sections/no-img.jpg")
-                            end
-                          else
-                            image_tag(articolo.immagine_url, :alt => h(truncate(articolo.subject, :length => 25)))
-                          end
-                          #   image_tag(articolo.immagine_url, :alt => h(truncate(articolo.subject, :length => 25)))
-                          # end
-                      %>
-                      <% if articolo.se_protetto %>
-                          <div class="fs-postmetadatafooter-ko">
-                            <div class="fs-postheadericons fs-metadata-icons">
-                              <p class="fs-postauthoricon"><%= h articolo.author %></p>
-
-                              <p class="fs-post-access-no">Articolo riservato agli abbonati</p>
-                            </div>
-                          </div>
-                      <% else %>
-                          <div class="fs-postmetadatafooter-ok">
-                            <div class="fs-postheadericons fs-metadata-icons">
-                              <p class="fs-postauthoricon"><%= h articolo.author %></p>
-
-                              <p class="fs-post-access-ok">Articolo consultabile liberamente</p>
-                            </div>
-                          </div>
-                      <% end %>
-                    </div>
-                    <%= articolo.summary %>
-                    <br/>
-                    <%=  link_to_articolo(articolo, :title=> link_to "Continua... " ) %>
-                  </div>
-                </div>
-            <% else %>
-                <br/>
-                <p class="nodata"><%= l(:label_no_data) %></p>
-                <br/>
-            <% end %>
-          </ARTICLE>
-          <%# render :partial => 'articolo_teaser', :locals => {:articolo => articolo} %>
-          <br/>
-      <% end %>
-      <br/>
-      <p class="pagination"><%#pagination_links_full(@issues_pages, @issues_count) %></p>
-      <br/>
-
-  <% else %>
-      <br/>
-
-      <p class="nodata"><%= l(:label_no_data) %></p>
-      <br/>
-  <% end %>
-</div>
-<%#sidebar a  destra %>
+  <%= render :partial => 'articoli', :locals => {:issues => @issues, :issues_pages => @issues_pages, :issues_count => @issues_count} %>
+    </div>
 <%= render :partial => 'blocco_sidebar1' %>
-<%#sidebar a destra %>
-<%# render :partial => 'blocco_sidebar2' %>
+
+
