--- a/app/views/editorial/quesito_show.html.erb
+++ b/app/views/editorial/quesito_show.html.erb
@@ -40,10 +40,10 @@
                     <%= @quesito_news.get_state_icons_fe %>
                      <%= @quesito_news.quesito_status_fs_text %> </span>
                     <%= render :partial => 'quesito', :locals => {:q => @quesito_news} %>
-                     <% if @quesito_news.reply  %>
-                         <h5> Messaggio dalla redazione : </h5>
-                       <p><%= raw(@quesito_news.reply) %>  </p>
-                      <% end %>
+                     <%# if @quesito_news.reply  %>
+                      <!--   <h5> Messaggio dalla redazione : </h5>
+                       <p><%# raw(@quesito_news.reply) %>  </p>  -->
+                      <%# end %>
                     <br />
                       <%= render :partial => 'quesito_reply', :locals => {:quesito_issues =>  @quesito_issues} %>
 
@@ -56,6 +56,7 @@
             </div>
           </div>
         </div>
+
       </article>
 
       <br/>
